--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         
         <service android:name=".PlaybackService" />
         
+        <activity android:name=".FullScreenPlayerActivity" />
+        
     </application>
 
 </manifest>
